# OLAH

./: .gitattributes  .gitignore  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt  run_api.py
api/: __init__.py  api.py  generative_features.py  run_api.py
data/: Recipes_Clean_Sampled.csv
model/: inference.py  recipe_recommender.py
notebooks/: olah_training.ipynb
saved_model/: label_encoder.pkl  olah_recommender.keras  recipe_embeddings.npy  recipe_metadata.json  training_history.json
